--- a/demo_app/requirements.txt
+++ b/demo_app/requirements.txt
@@ -9,6 +9,5 @@ torchvision==0.17.0
 matplotlib==3.8.3
 onnxruntime==1.19.2
 
-# THIS LINE FIXES THE KeyError: '__version__' ERROR
-# It bypasses the broken insightface package on PyPI
-https://github.com/timesler/facenet-pytorch/releases/download/v1.0.0/insightface-0.7.3-cp311-cp311-manylinux_2_28_x86_64.whl
+# FIXED insightface wheel for Python 3.13+ on Linux (bypasses build error)
+https://github.com/Gourieff/Assets/raw/main/Insightface/insightface-0.7.3-cp313-cp313-manylinux_2_28_x86_64.whl
