--- a/demo_app/requirements.txt
+++ b/demo_app/requirements.txt
@@ -1,3 +1,5 @@
+--no-build-isolation
+
 streamlit==1.32.0
 ultralytics==8.3.22
 opencv-python-headless==4.9.0.80
@@ -8,6 +10,3 @@ torch==2.2.0
 torchvision==0.17.0
 matplotlib==3.8.3
 onnxruntime==1.19.2
-
-# FIXED insightface wheel for Python 3.13+ on Linux (bypasses build error)
-https://github.com/Gourieff/Assets/raw/main/Insightface/insightface-0.7.3-cp313-cp313-manylinux_2_28_x86_64.whl
