modified:   demo_app/requirements.txt

--- a/demo_app/requirements.txt
+++ b/demo_app/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.32.0
-ultralytics==8.3.22
-opencv-python-headless==4.9.0.80
-albumentations==1.4.0
-pillow==10.2.0
-numpy==1.26.4
-torch==2.2.0
-torchvision==0.17.0
-matplotlib==3.8.3
-onnxruntime==1.19.2
+streamlit==1.39.0
+ultralytics>=8.3.22
+opencv-python-headless==4.10.0.84
+albumentations==1.4.18
+pillow==11.1.0
+numpy==2.1.1
+torch>=2.5.0
+torchvision>=0.20.0
+matplotlib==3.9.2
+onnxruntime==1.20.0
